--- a/cwiczenie-2.html
+++ b/cwiczenie-2.html
@@ -22,7 +22,41 @@
 	
 		function sprawdz()
 		{
-			
+            var imie = document.getElementById("imie").value;
+            var wiek = document.getElementById("wiek").value;
+            document.getElementById("wynik").style.color = "blue";
+
+
+            if (wiek < 16)
+			{
+				document.getElementById("wynik").innerHTML = "Nie może wziąć udziału w seansie";
+
+			}
+
+			if (wiek >= 16 && wiek <= 17)
+			{
+				document.getElementById("wynik").innerHTML = "Może wziąć udział, jeśli jest z opiekunem. Cena biletu to; 12zł ";
+
+			}
+
+			if (wiek >= 18)
+			{
+            
+
+				document.getElementById("wynik").innerHTML = "Może wziąć udział. Cena biletu to; 18zł; ";
+
+			}
+
+			if (wiek >= 18 && imie == "Brad")
+			{
+				document.getElementById("wynik").innerHTML = "Witamy Brad, wchodzisz za darmo!";
+			}
+
+			if (wiek >= 18 && imie == "Morgan")
+			{
+			    document.getElementById("wynik").innerHTML = "Witamy Morgan, wchodzisz za darmo!";
+			}
+
 			
 		}
 
